--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
 
                 <div id="skills">
                     <div class="icones">
-                        <img src="/img/skill - 1.svg">
+                        <img src="img/skill - 1.svg">
                         <h2>HTML&CSS</h2>
                         <p>
                             Desenvolvimento com as ferramentas mais atuais.
                         </p>
                     </div>
                     <div class="icones">
-                      <img src="/img/skill - 2.svg">
+                      <img src="img/skill - 2.svg">
                       <h2>Responsividade</h2>
                       <p>
                         Sites totalmente responsivos, com visual clean e moderno
@@ -163,11 +163,11 @@
             <p>Para mais informações entre em contato</p>
             <div id="icones">
                 <a href="mailto:lucasrodrigues.mr@gmail.com">
-                    <img src="/img/icon email.svg">
+                    <img src="img/icon email.svg">
                 </a>
 
                 <a href="https://www.instagram.com/lucas.mr20/">
-                    <img src="/img/icon instagran.svg">
+                    <img src="img/icon instagran.svg">
                 </a>
 
                 <a href="https://www.linkedin.com/in/lucas-rodrigues-809a641b8/">
