--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                 <div id="skills">
                     <div class="icones">
-                        <img src="img/skill - 1.svg">
+                        <img src="./img/skill - 1.svg">
                         <h2>HTML&CSS</h2>
                         <p>
                             Desenvolvimento com as ferramentas mais atuais.
