--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
             <p>Para mais informações entre em contato</p>
             <div id="icones">
                 <a href="mailto:lucasrodrigues.mr@gmail.com">
-                    <img src="img/icon email.svg">
+                    <img src="./img/icon email.svg">
                 </a>
 
                 <a href="https://www.instagram.com/lucas.mr20/">
-                    <img src="img/icon instagran.svg">
+                    <img src="./img/icon instagran.svg">
                 </a>
 
                 <a href="https://www.linkedin.com/in/lucas-rodrigues-809a641b8/">
-                    <img src="img/icon linkedin.svg">
+                    <img src="./img/icon linkedin.svg">
                 </a>
                 
 
