--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
                 <div class="portflio">
                     <a href="links sites/Escola Desenvolvimento Web/index.html">
-                        <img src="img/site-01.png">
+                        <img src="./img/site-01.png">
                     </a>
                 </div>
                     
                 <div class="portflio">
                     <a href="links sites/Portfólio Exemplo/index.html">
-                        <img src="img/site-02.png">
+                        <img src="../img/site-02.png">
                     </a>
                 </div>
                  
