--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     
                 <div class="portflio">
                     <a href="links sites/Portfólio Exemplo/index.html">
-                        <img src="/img/site-02.png">
+                        <img src="./img/site-02.png">
                     </a>
                 </div>
                  
