--- a/links sites/Construção/index.html
+++ b/links sites/Construção/index.html
@@ -114,12 +114,12 @@
             </p>
 
             <div id="portfolio">
-                <img src="/img/portfolio - 1.jpg" alt="">
-                <img src="/img/portfolio - 2.jpg" alt="">
-                <img src="/img/portfolio - 3.jpg" alt="">
-                <img src="/img/portfolio - 4.jpg" alt="">
-                <img src="/img/portfolio - 5.jpg" alt="">
-                <img src="/img/portfolio - 6.jpg">
+                <img src="./img/portfolio - 1.jpg" alt="">
+                <img src="./img/portfolio - 2.jpg" alt="">
+                <img src="./img/portfolio - 3.jpg" alt="">
+                <img src="./img/portfolio - 4.jpg" alt="">
+                <img src="./img/portfolio - 5.jpg" alt="">
+                <img src="./img/portfolio - 6.jpg">
             </div>
     </section>
     <!--Fim Portfólio-->
